# astroMUGS-ui

./: .gitignore  README.md  pyproject.toml
backend/api/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/nodes/: EntryNode.jsx  MasterNode.jsx  PipelineNode.jsx
frontend/src/components/params/: ParamBlock.jsx  paramDefs.js
frontend/src/components/pipeline/: PipelineToolbar.jsx  SlidePanel.jsx
frontend/src/components/tabs/: PhysicalModelTab.jsx  TabBar.jsx  ThermalParametersTab.jsx
