[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astromugs-ui"
version = "0.1.0"
description = "A visual node-based interface for building astroMUGS pipelines"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Sacha Gavino", email = "your.email@example.com" },
]
keywords = [
    "astronomy",
    "astrophysics",
    "radiative-transfer",
    "astrochemistry",
    "pipeline",
    "visualization",
    "node-based",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astromugs",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
astromugs-ui = "astromugs_ui.cli:main"

[project.urls]
Homepage = "https://github.com/sachagavino/astromugs-ui"
Documentation = "https://astromugs-ui.readthedocs.io"
Repository = "https://github.com/sachagavino/astromugs-ui"
Issues = "https://github.com/sachagavino/astromugs-ui/issues"

[tool.hatch.build.targets.wheel]
packages = ["astromugs_ui"]

[tool.hatch.build.targets.sdist]
include = [
    "astromugs_ui/",
    "frontend/dist/",
    "backend/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP"]
ignore = []